# code-gen-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-alpine  Dockerfile-exe  Dockerfile-normal  Dockerfile-slim  Dockerfile2  Dockerfile2-1  Dockerfile2-2  Dockerfile3  LICENSE  README.md  RedisSpider.py  TestAirSpider.py  aiodb.py  auto-commit.bat  build.py  db.py  docker-compose.yml  docker-compose2.yml  init.sql  main.py  package-lock.json  pyproject.toml  requirement.txt  requirements.txt  setting.py  start.bat  start.py
action/: dd.py
dao/: dd.py
laorm/core/: PPA.py  __init__.py  stream.py
laorm/fastapi/: PPAFastAPI.py  __init__.py
models/example/: input.py
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
pages/: 1.html
resources/template/java/: Entity.java  Model.xml
router/: auth.py  connect.py  example.py  food.py  generate.py  main.py  tempmain.py  tt.py  tt2.py  tt3.py
server/connect/: dao.py
server/food/: dao.py
server/generate/: dao.py  index.py  routerg.py
template/: 1.html  new_file.html
template/extend/: base.html
template/java/: Controller.java  Entity.java  Info.java  Mapper.java  Model.xml  Query.java  Repository.java  Service.java  ServiceImpl.java  model.xml
template/macro/: _macros.html
template/mobile/: index.vue
util/: PPAFastAPI.py  auth.py  base.py  cache.py  exception.py  index.py  redis.py  response.py  router.py  system.py
web/: dockerfile  dockerfile copy 2  dockerfile-nginx  dockerfile-node  index.html  package-lock.json  package.json  vite.config.js
web-drag/: pnpm-lock.yaml  vite.config.js
web-drag/nginx/: nginx.conf
web-drag/src/: App.vue  components.d.ts
web/nginx/: nginx.conf
web/src/: App.vue  main.js
web/src/store/: index.js
(+13 files in other folders)
